[package]
name = "stormlib"
version = "0.1.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stormlib-sys = { path = "../stormlib-sys" }
bitflags = "2.13.1"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
widestring = "1.2.1"
